--- a/Framework/Engine/Utility/Include/Utility.vcxproj
+++ b/Framework/Engine/Utility/Include/Utility.vcxproj
@@ -176,6 +176,7 @@ call CopyUtility.bat</Command>
     <ClInclude Include="..\..\Header\Component.h" />
     <ClInclude Include="..\..\Header\Export_Utility.h" />
     <ClInclude Include="..\..\Header\GameObject.h" />
+    <ClInclude Include="..\..\Header\KeyMgr.h" />
     <ClInclude Include="..\..\Header\Layer.h" />
     <ClInclude Include="..\..\Header\Light.h" />
     <ClInclude Include="..\..\Header\LightMgr.h" />
@@ -202,6 +203,7 @@ call CopyUtility.bat</Command>
     <ClCompile Include="..\Code\CollisionMgr.cpp" />
     <ClCompile Include="..\Code\Component.cpp" />
     <ClCompile Include="..\Code\GameObject.cpp" />
+    <ClCompile Include="..\Code\KeyMgr.cpp" />
     <ClCompile Include="..\Code\Layer.cpp" />
     <ClCompile Include="..\Code\Light.cpp" />
     <ClCompile Include="..\Code\LightMgr.cpp" />
