--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -179,9 +179,14 @@
     <ClInclude Include="..\Header\Monster.h" />
     <ClInclude Include="..\Header\Player.h" />
     <ClInclude Include="..\Header\Player_State.h" />
+    <ClInclude Include="..\Header\Player_State_Hit.h" />
     <ClInclude Include="..\Header\Player_State_Idle.h" />
+    <ClInclude Include="..\Header\Player_State_Jump.h" />
+    <ClInclude Include="..\Header\Player_State_Lift.h" />
+    <ClInclude Include="..\Header\Player_State_Push.h" />
     <ClInclude Include="..\Header\Player_State_Rolling.h" />
     <ClInclude Include="..\Header\Player_State_Run.h" />
+    <ClInclude Include="..\Header\Player_State_Swing.h" />
     <ClInclude Include="..\Header\Player_State_Walk.h" />
     <ClInclude Include="..\Header\SkyBox.h" />
     <ClInclude Include="..\Header\Stage.h" />
@@ -199,9 +204,14 @@
     <ClCompile Include="..\Code\Monster.cpp" />
     <ClCompile Include="..\Code\Player.cpp" />
     <ClCompile Include="..\Code\Player_State.cpp" />
+    <ClCompile Include="..\Code\Player_State_Hit.cpp" />
     <ClCompile Include="..\Code\Player_State_Idle.cpp" />
+    <ClCompile Include="..\Code\Player_State_Jump.cpp" />
+    <ClCompile Include="..\Code\Player_State_Lift.cpp" />
+    <ClCompile Include="..\Code\Player_State_Push.cpp" />
     <ClCompile Include="..\Code\Player_State_Rolling.cpp" />
     <ClCompile Include="..\Code\Player_State_Run.cpp" />
+    <ClCompile Include="..\Code\Player_State_Swing.cpp" />
     <ClCompile Include="..\Code\Player_State_Walk.cpp" />
     <ClCompile Include="..\Code\SkyBox.cpp" />
     <ClCompile Include="..\Code\Stage.cpp" />
